[project]
name = "task-tracker"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tudor Huza", email = "huzatudor@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
]

[project.scripts]
task-cli = "task.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/task"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
